add_subdirectory(Cobs)
add_subdirectory(CheckCond)
add_subdirectory(SwFifo)
add_subdirectory(SwTimer)
add_subdirectory(RtosUtils)
add_subdirectory(WifiConnect)
add_subdirectory(TcpSocket)
add_subdirectory(TcpServer)
add_subdirectory(TcpEcho)
add_subdirectory(NvParms)
add_subdirectory(Random)
add_subdirectory(CList)
add_subdirectory(WS2812Led)
add_subdirectory(PbGeneric)
add_subdirectory(ProtoRpc)
add_subdirectory(TestRpc)
add_subdirectory(TcpRpcServer)
add_subdirectory(slip)
